# test-rust-ocr

./: Cargo.toml
testocr/: Cargo.toml
testocr/src/: copy.rs  global.rs  key-listener.rs  ocr.rs
