[package]
name = "test-ocr"
version = "0.1.0"
edition = "2021"
default-run = "test-ocr"

[dependencies]
rdev = "0.5.3"
scrap = "0.5.0"
image = "0.25.2"
regex = "1.11.0"
enigo = "0.2.1"
lazy_static = "1.5.0"

windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }

[[bin]]
name = "test-ocr"
